--- a/backend/ManageMe/appsettings.json
+++ b/backend/ManageMe/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SqlServerConnectionString": "server=.;database=ManageMe;trusted_connection=true;TrustServerCertificate=True;"
 }
